[tool.poetry]
name = "classifier_test"
version = "0.1.0"
description=""
authors = ["Regev Ace <regev89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastai = "^2.7.14"
gradio = "^4.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"